# dagster-cwl

./: README.md  arith_workflow.cwl  cwl_job.yaml  dagster_cwl_modern.py  dagster_cwl_poc.py  environment.yml  pyproject.toml
.dagster_home/.telemetry/: id.yaml
.dagster_home/history/: runs.db
.dagster_home/history/runs/: 035c1dee-16b8-4476-8457-bfd0948bf0e6.db  2675a509-50e9-429c-a6b2-dae956700008.db  26b70767-9d68-4188-a48f-3b2be27e6592.db  32a81bdf-450a-4571-938a-842a04352167.db  493a580f-7c9f-41d3-b9e7-4084229a2253.db  67de1781-eb69-47e9-a5fa-de0575f5f218.db  76052a09-150b-4c21-8ba5-2aa51e26f181.db  9150822b-8563-4b63-ae41-a7db2744f3c8.db  a7675bb2-3ca7-487b-917a-dd50e225f240.db  b171bd11-24b5-4b6a-806a-2b22ae5292ba.db  c01424ba-e300-44a9-b012-21434c58d1b8.db  c3b4afe1-20b7-4541-9397-fb19b8613d2d.db  da52e934-8302-4421-a147-5309f9228a17.db  dba61f5f-15f8-42b2-bb17-96260275b9ba.db  ddb7b8cd-97ce-407b-91f0-ba6777e5e51a.db  index.db
.dagster_home/schedules/: schedules.db
cwl/: arith_workflow.cwl  inputs.yml
outputs_registry/: 2675a509-50e9-429c-a6b2-dae956700008_run_cwl_op_result.txt
prov/: bag-info.txt  manifest-sha1.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
prov/metadata/: manifest.json
prov/metadata/logs/: engine.5398408e-3860-4e9b-977d-8dfddb9a4da4.txt  engine.556724b0-11cb-4cea-9e18-97f78abd6560.txt
prov/snapshot/: arith_workflow.cwl
prov/workflow/: packed.cwl  primary-job.json  primary-output.json
run_configs/: cwl_job.yaml
src/dagster_cwl_modern/: dagster_cwl_modern.py
(+20 files in other folders)
