
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-cwl-modern"
version = "0.0.1"
description = "Pattern A: CWL runner inside Dagster (modern API)"
requires-python = ">=3.9"
dependencies = [
  "dagster>=1.7,<1.9",
  "dagster-webserver>=1.7,<1.9",
  "cwltool>=3.1.202"
]

[tool.dagster]
module_name = "dagster_cwl_modern"
